Fix z-index + fix controller problem

--- a/src/compass/sass/basic.scss
+++ b/src/compass/sass/basic.scss
@@ -300,7 +300,7 @@ body, .submit{font-family:$basic-font;}
 .logo .pic{height:100%;}
 .small-logo{float:left; width:200px;}
 
-.top-nav{position:relative; min-height:28px; background:#ae5279; z-index:9;}
+.top-nav{position:relative; min-height:28px; background:#ae5279; z-index:10;}
 .top-nav .link{font-size:75%;}
 .top-nav .ico-cart{font-size:16px; position:relative; top:2px; margin-right:2px;}
 .ul-top-nav > li{float:right;}
